Insert charts into the project
Charts for wallets and transactions and mining with hard coded data to test rendering of charts
Add routes from index to wallets, transactions and charts
Read mining data from the DB

--- a/dravidium_simulator/lib/dravidium_simulator_web/templates/layout/app.html.eex
+++ b/dravidium_simulator/lib/dravidium_simulator_web/templates/layout/app.html.eex
@@ -9,15 +9,18 @@
 
     <title>Hello DravidiumSimulator!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+
+    <!-- https://developers.google.com/chart/interactive/docs/quick_start -->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <!-- Chartkick -->
+    <script type="text/javascript" src="https://unpkg.com/chartkick@2.3.2/dist/chartkick.js"></script>
   </head>
 
   <body>
     <div class="container">
       <header class="header">
         <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-          </ul>
+          
         </nav>
         <span class="logo"></span>
       </header>
