--- a/dravidium_simulator/lib/dravidium_simulator_web/templates/page/index.html.eex
+++ b/dravidium_simulator/lib/dravidium_simulator_web/templates/page/index.html.eex
@@ -1,16 +1,78 @@
-<div class="row marketing">
-  <div class="col-lg-12">
-    <h4>Features</h4>
-    <ul>
-      <li>
-        <a href="<%= page_path(@conn, :wallets)%>">Wallet</a>
-      </li>
-      <li>
-        <a href="<%= page_path(@conn, :transactions)%>">Transactions</a>
-      </li>
-      <li>
-        <a href="<%= page_path(@conn, :mining)%>">Mining</a>
-      </li>
-    </ul>
-  </div>
+<style>
+   #cf {
+   position:relative;
+   height:200px;
+   width:250px;
+   margin:0 auto;
+   }
+   #cf img {
+   position:absolute;
+   left:0;
+   -webkit-transition: opacity 1s ease-in-out;
+   -moz-transition: opacity 1s ease-in-out;
+   -o-transition: opacity 1s ease-in-out;
+   transition: opacity 1s ease-in-out;
+   }
+   #cf img.top:hover {
+   opacity:0;
+   }
+</style>
+<div id="header-wrapper">
+   <div id="header" class="container">
+      <div id="logo">
+         <span class="icon icon-group"></span>
+         <h1><a>Dravidium</a></h1>
+         <span>Cryptocurrency you can depend upon</span>
+      </div>
+      <div id="triangle-up"></div>
+   </div>
+</div>
+<div id="menu-wrapper">
+   <div id="menu">
+      <ul>
+         <li><a href="<%= page_path(@conn, :index)%>">Homepage</a></li>
+      </ul>
+   </div>
+</div>
+<div id="wrapper">
+   <div id="featured-wrapper">
+      <div class="extra2 container">
+         <table>
+            <tr>
+               <td style="border-bottom: none">
+                  <a href="<%= page_path(@conn, :wallets)%>">
+                     <div id="cf">
+                        <img class="bottom" src="\images\wallet_open.jpg" style="width:220px;height:200px;" />
+                        <img class="top" src="\images\wallet_close.jpg" style="width:220px;height:200px;" />
+                     </div>
+                  </a>
+               </td>
+               <td style="border-bottom: none">
+                  <a href="<%= page_path(@conn, :transactions)%>">
+                     <div id="cf">
+                        <img class="bottom" src="\images\transaction_open.jpg" style="width:220px;height:200px;" />
+                        <img class="top" src="\images\transaction_close.jpg" style="width:220px;height:200px;" />
+                     </div>
+                  </a>
+               </td>
+               <td style="border-bottom: none">
+                  <a href="<%= page_path(@conn, :mining)%>">
+                     <div id="cf">
+                        <img class="bottom" src="\images\mining_open.jpg" style="width:220px;height:200px;" />
+                        <img class="top" src="\images\mining_close.jpg" style="width:220px;height:200px;" />
+                     </div>
+                  </a>
+               </td>
+            </tr>
+            <tr>
+               <td><a href="<%= page_path(@conn, :wallets)%>" class="button">Wallet</a></td>
+               <td><a href="<%= page_path(@conn, :transactions)%>" class="button">Transactions</a></td>
+               <td><a href="<%= page_path(@conn, :mining)%>" class="button">Mining</a></td>
+            </tr>
+         </table>
+      </div>
+   </div>
+</div>
+<div id="copyright" class="container">
+   <p>&copy; Harkirat Singh Lamba | Srikanth Bhardawaj</p>
 </div>
