--- a/dravidium_simulator/lib/dravidium_simulator_web/templates/page/transactions.html.eex
+++ b/dravidium_simulator/lib/dravidium_simulator_web/templates/page/transactions.html.eex
@@ -1,21 +1,29 @@
-<a href="<%= page_path(@conn, :index)%>">Index</a>
-
-<div class="row">
-  <h1>Chart's For BTC/BRL with 360 Days history</h1>
-  <div class="col-lg-12">
-    <h2>Line Chart</h2>
-    <%= raw Chartkick.line_chart @day_data %>
-  </div>
-
-  <h1>Chart's For BTC/BRL with 120 Days history</h1>
-  <div class="col-lg-12">
-    <h2>Line Chart</h2>
-    <%= raw Chartkick.line_chart @day_data_120 %>
-  </div>
-
-  <h1>Chart's For BTC/BRL with 30 Days history</h1>
-  <div class="col-lg-12">
-    <h2>Line Chart</h2>
-    <%= raw Chartkick.line_chart @day_data_30 %>
-  </div>
+<div id="header-wrapper">
+   <div id="header" class="container">
+      <div id="logo">
+         <span class="icon icon-group"></span>
+         <h1><a>Dravidium</a></h1>
+         <span>Cryptocurrency you can depend upon</span>
+      </div>
+      <div id="triangle-up"></div>
+   </div>
+</div>
+<div id="menu-wrapper">
+   <div id="menu">
+      <ul>
+         <li><a href="<%= page_path(@conn, :index)%>">Homepage</a></li>
+      </ul>
+   </div>
+</div>
+<div id="wrapper">
+   <div id="featured-wrapper">
+      <div class="extra2 container">
+         <div class="row">
+            Here
+         </div>
+      </div>
+   </div>
+</div>
+<div id="copyright" class="container">
+   <p>&copy; Harkirat Singh Lamba | Srikanth Bhardawaj</p>
 </div>
