--- a/dravidium_simulator/lib/dravidium_simulator_web/templates/page/mining.html.eex
+++ b/dravidium_simulator/lib/dravidium_simulator_web/templates/page/mining.html.eex
@@ -19,14 +19,18 @@
    <div id="featured-wrapper">
       <div class="extra2 container">
          <div class="row">
-            <h1>Number of Bitcoins Mined by User</h1>
+            <h1>Number of Mines by User</h1>
+            <br/>
             <div class="col-lg-12">
-               <h2>Miner vs Number of Bitcoins</h2>
-               <%= raw Chartkick.column_chart @num_coins_data %>
+               <h2>Miner against Number of minings</h2>
+               <%= raw Chartkick.pie_chart @num_coins_data%>
+               <br/>
             </div>
+            
             <h1>Time Taken for Mining</h1>
+            <br/>
             <div class="col-lg-12">
-               <h2>Miner vs Time Taken(in secs)</h2>
+               <h2>Miner vs Time Taken(in ms)</h2>
                <%= raw Chartkick.line_chart @time_data %>
             </div>
          </div>
