--- a/dravidium_simulator/lib/dravidium_simulator_web/templates/page/transactions.html.eex
+++ b/dravidium_simulator/lib/dravidium_simulator_web/templates/page/transactions.html.eex
@@ -19,9 +19,13 @@
    <div id="featured-wrapper">
       <div class="extra2 container">
          <div class="row">
-            Here
+            <h1>Transactions Chart</h1>
+               <br/>
+               <div class="col-lg-12">
+                  <h2>Sender vs Number of Bitcoins</h2>
+                  <%= raw Chartkick.bar_chart @transaction_data %>
+               </div>
          </div>
-      </div>
    </div>
 </div>
 <div id="copyright" class="container">
