--- a/dravidium_simulator/lib/dravidium_simulator_web/templates/page/wallets.html.eex
+++ b/dravidium_simulator/lib/dravidium_simulator_web/templates/page/wallets.html.eex
@@ -19,7 +19,13 @@
    <div id="featured-wrapper">
       <div class="extra2 container">
          <div class="row">
-            Here
+            <h1>Number of Coins in User's Wallet</h1>
+            <br/>
+            <div class="col-lg-12">
+               <h2>Miner against Number of bitcoins</h2>
+               <%= raw Chartkick.scatter_chart @transaction_wallet_data, min: 950, max: 1050 %>
+               <br/>
+            </div>
          </div>
       </div>
    </div>
